# zed-pubspec-lsp

./: .gitignore  Cargo.toml  README.md  extension.toml
.github/workflows/: ci.yml  release.yml
languages/pubspec/: config.toml
server/: Cargo.toml
server/src/: actions.rs  completions.rs  context.rs  diagnostics.rs  document.rs  hover.rs  lib.rs  main.rs  pubdev.rs  pubspec.rs  server.rs  versions.rs
server/tests/: diagnostics_test.rs  lsp_smoke.rs
src/: lib.rs
